[gd_scene load_steps=9 format=3 uid="uid://wpljbf28wo3q"]

[ext_resource type="Script" path="res://level.gd" id="1_cqrka"]
[ext_resource type="PackedScene" uid="uid://b1leffpms1w63" path="res://rose.tscn" id="1_w4hvn"]
[ext_resource type="AudioStream" uid="uid://cy1csch6we3i6" path="res://sound/Karine_Gilanyan_-_Beethoven_-_Piano_Sonata_nr15_in_D_major_op28_Pastoral_-_II_Andante(chosic.com).mp3" id="2_qhkdq"]
[ext_resource type="Texture2D" uid="uid://t1mxp1c6t76y" path="res://materials/Player.png" id="4_5rsit"]
[ext_resource type="Script" path="res://Person.gd" id="4_8cqok"]
[ext_resource type="Script" path="res://Control.gd" id="4_oqfso"]
[ext_resource type="AudioStream" uid="uid://idwgfuifvwdw" path="res://sound/436761__xpoki__no_normal.wav" id="7_ene6b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6mug8"]
size = Vector2(206, 201)

[node name="level" type="Node"]
script = ExtResource("1_cqrka")

[node name="rejectsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ene6b")

[node name="Rose" parent="." instance=ExtResource("1_w4hvn")]
position = Vector2(814, 463)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qhkdq")
autoplay = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
script = ExtResource("4_oqfso")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="hpvalue" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "100"

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HP"

[node name="Person" type="Node2D" parent="."]
script = ExtResource("4_8cqok")

[node name="Sprite2D" type="Sprite2D" parent="Person"]
texture = ExtResource("4_5rsit")

[node name="Area2D" type="Area2D" parent="Person"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Person/Area2D"]
position = Vector2(2, 7)
shape = SubResource("RectangleShape2D_6mug8")

[connection signal="take_damage" from="." to="." method="_on_take_damage"]
[connection signal="take_damage" from="." to="Control" method="_on_level_take_damage"]
[connection signal="dropped" from="Rose" to="." method="_on_rose_dropped"]
[connection signal="picked_up" from="Rose" to="." method="_on_rose_picked_up"]
[connection signal="rejected" from="Control" to="." method="_on_control_rejected"]
[connection signal="rejected" from="Control" to="Person" method="_on_control_rejected"]
[connection signal="area_entered" from="Person/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Person/Area2D" to="." method="_on_area_2d_area_exited"]
